# server_c_go

./: .gitignore  CMakeLists.txt  README.md  a.out  example.sh  launch.json  main.cpp  pythontest.py  test.cpp
CmakeLearn/src/: Gun.cpp
docker/clickhouse/: docker-compose.yaml  init-grafana-correlations.sh  otel-collector-config.yaml
docker/clickhouse/doc/: clickhouse-logs.md
docker/clickhouse/initdb/: 01_create_logs_table.sql  02_create_metrics_table.sql  03_create_traces_table.sql  04_create_logs_json_table.sql  05_create_traces_json_table.sql  06_create_alerts_table.sql
docker/micro-log/: docker-compose.yaml  otel-collector-config.yaml
gomod/: CMakeLists.txt  go.mod  go.sum  gomod  main.go  service.gotpl  somefunc.go
gomod/filerw/: filerw.go
gomod/flagex/: flagex.go
gomod/generics/: generics.go
gomod/go_test/: go_test.go
gomod/gogenerate/: generatetest.go  week.go  weekday_string.go
gomod/httpex/: filesvr.go  ginex.go  httpex.go  pprof.go  websocket.go
gomod/interfaceex/: interfaceex.go
gomod/invoicedata/: gob.go  inv.go  invoicedata.go  jsn.go  txt.go  xml.go
gomod/mylib/: hign_fefense_ip_log.sh  mylib.go
gomod/ostest/: ostest.go
gomod/pprofshow/: show.go
gomod/reflecttest/: reflecttest.go
gomod/timeex/: timeex.go
gomod/txt_template/: grafana_noticepoint.tmpl  txt_template.go
gomod/zlog/: zlog.go
includes/: Gun.h  Log.h  Math.h  Sockets.h  Soldier.h  algorithm.h  class_construction.h  mychrono.h  proto_test.proto  std_example.h  syntax.h  template_test.h  time_test.h  topo_sort.h  unixsys.h
proto/: proto_option.proto
proto_out/: proto_option.pb.cc  proto_option.pb.h  proto_test.cpp  proto_test.h
protobuf-21.9/lib64/cmake/protobuf/: protobuf-config-version.cmake  protobuf-module.cmake  (+2 more)
protobuf-21.9/lib64/pkgconfig/: protobuf-lite.pc  protobuf.pc
script/: argparse.py  container_test.py  decorator_test.py  package_test.py  test.py  topo_sort.py
src/: Gun.cpp  Log.cpp  Math.cpp  Sockets.cpp  algorithm.cpp  mychrono.cpp  proto_test.pb.cc  proto_test.pb.h  soldier.cpp  std_example.cpp  syntax.cpp  template_test.cpp  time_test.cpp  topo_sort.cpp  unixsys.cpp
typescript/js_output/: example.js
typescript/src/: example.ts
web_source/test/: example.html  test.html  test.js
web_source/websocket/: websocket.html
web_source/webtest/: index.html  nginx.conf
web_source/webtest/assets/: base.93b454ff.js  blank.d11aa59b.js  default.90c970f3.js  footer.3e6d4829.js  form.42f576e6.js  index.030fe2f8.js  index.05046fb7.js  index.06603075.js  index.0d5a72f3.js  index.280857c5.js  index.298f3c27.js  index.3194d040.js  index.3c1acb16.js  index.57cbda96.js  index.5adf583b.js  index.69972d1b.js  index.71123e25.js  index.759a6ae2.js  index.86e68d00.js  index.89edf791.js  index.8cfca5a5.js  index.91c1d8ee.js  index.a0884dba.js  index.b0f3c209.js  index.b80fff2f.js  index.c4d76af7.js  index.ddadb0ed.js  index.ddbac8df.js  index.e3fbb539.js  index.e823000d.js  index.e9b52021.js  index.f21a3b0a.js  list.f19861b4.js  output.fb7f1544.js  pkg.05bd79f5.js  refresh.25a39116.js  runshell.7d76000c.js  sidenav.5d988d87.js  style.4a70ff7c.css  td-layout.86c5ed87.js  (+2 more)
(+3 files in other folders)
